project/force-app/main/default/objects/Account_Brand_Relationship__c/Account_Brand_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account-Brand Relationship</label>
    <pluralLabel>Account-Brand Relationships</pluralLabel>
    <nameField>
        <displayFormat>ABR-{0000000}</displayFormat>
        <label>Account-Brand Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object to manage many-to-many relationships between Accounts and Brands</description>
</CustomObject>