project/force-app/main/default/objects/Account_Brand_Relationship__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Account-Brand Relationships</relationshipLabel>
    <relationshipName>Brand_Account_Brand_Rels</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>