project/force-app/main/default/objects/Account_Brand_Relationship__c/fields/Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reference__c</fullName>
    <label>Contract Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>