project/force-app/main/default/objects/Account_Brand_Relationship__c/fields/Is_Primary_Brand__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Brand__c</fullName>
    <label>Primary Brand</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>