project/force-app/main/default/objects/Account_Brand_Relationship__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>Ensures that the End Date is after the Start Date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Date__c)),
    End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date</errorMessage>
</ValidationRule>