project/force-app/main/default/objects/Account_Brand_Relationship__c/listViews/Active_Relationships.listView-meta.xml
<ListView>
    <fullName>Active_Relationships</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brand__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Is_Primary_Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Relationships</label>
</ListView>