project/force-app/main/default/objects/Account_Brand_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brand__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_Primary_Brand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account-Brand Relationships</label>
</ListView>